java 11 (#239)
* java 11

* remove openjdk-8-jre-headless

* PrintGCDateStamps

* update flags